--- a/r_docs/Andy_Field.Rmd
+++ b/r_docs/Andy_Field.Rmd
@@ -9,6 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE, message = F, warning = F)
 library(tidyverse)
 library(here)
+library(kableExtra)
 ```
 
 # This is a plot of some built in data
@@ -19,9 +20,11 @@ plot(pressure)
 
 # This is a plot of some built in data
 
-```{r}
-my_data <- readr::read_csv()
-my_data
+```{r, results='asis'}
+my_data <- readr::read_csv("../data/mtcars.csv")
+my_data %>% 
+  knitr::kable(caption = "Table 1: Cars",digits = 2) %>% 
+  kableExtra::kable_styling(bootstrap_options = "striped",full_width = F )
 ```
 
 
